navbar flex almost fixed, need to fix icon-container's overflowing navbar container

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,14 +1,5 @@
 @import "../../styles/mediaQueries.scss";
-@mixin navbar-desktop-option-font {
-  color: #000;
-  font-family: "Helvetica Neue";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 200;
-  line-height: normal;
-  letter-spacing: 1.92px;
-}
-
+@import "../../styles/fonts.scss";
 *,
 *::before,
 *::after {
@@ -63,7 +54,12 @@ h6 {
   height: 46px;
   padding: 0 20px;
 
-  .navbar-wrapper {
+  @include desktop {
+    height: 64px;
+    padding: 14px 127px;
+  }
+
+  .header-wrapper {
     display: flex;
     flex-flow: row;
     justify-content: space-between;
@@ -78,27 +74,48 @@ h6 {
       justify-content: space-between;
       width: calc(50% + $halfOfLogoPixels);
 
+      @include desktop {
+        $logo-button-links-gap: 15.07px;
+        justify-content: flex-start;
+        gap: $logo-button-links-gap;
+        // width: auto;
+      }
+
       .logo-container {
         display: flex;
         flex-flow: row;
         align-items: center;
         justify-content: center;
+        flex-shrink: 0;
       }
+
+      .navbar-buttons-container {
+        display: none;
+
+        @include desktop {
+          $button-links-gap: 32px;
+          display: flex;
+          flex-flow: row;
+          align-items: center;
+          justify-content: center;
+          gap: $button-links-gap;
+          @include link-buttons-navbar-font;
+
+          .epicure-text-title {
+            @include epicure-navbar-font;
+          }
+        }
+      }
+
       .menu-container {
         display: flex;
         flex-flow: row;
         align-items: center;
         justify-content: center;
-      }
-
-      .epicure-text-title {
-        display: none;
-      }
-      .chefs-navbar-button {
-        display: none;
-      }
-      .restaurants-navbar-button {
-        display: none;
+        flex-shrink: 0;
+        @include desktop {
+          display: none;
+        }
       }
     }
   }
@@ -109,9 +126,12 @@ h6 {
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    width: 100px;
+    // width: 100px;
     height: 20px;
-
+    flex-shrink: 0;
+    @include desktop {
+      gap: 24px;
+    }
     .search-button {
       display: flex;
       flex-flow: row;
